--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -1,5 +1,15 @@
 
-
+@article{punzo2005nonstationary,
+  title={Nonstationary kalman filter for estimation of accurate and consistent car-following data},
+  author={Punzo, Vincenzo and Formisano, Domenico Josto and Torrieri, Vincenzo},
+  journal={Transportation research record},
+  volume={1934},
+  number={1},
+  pages={2--12},
+  year={2005},
+  remark={The Napoli driving experiment},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
 
 @article{farazi2020deep,
   title={Deep Reinforcement Learning and Transportation Research:
