--- a/database.bib
+++ b/database.bib
@@ -34727,6 +34727,18 @@ remark={FVDM}
   year={2009}
 }
 
+@article{punzo2005nonstationary,
+  title={Nonstationary kalman filter for estimation of accurate and consistent car-following data},
+  author={Punzo, Vincenzo and Formisano, Domenico Josto and Torrieri, Vincenzo},
+  journal={Transportation research record},
+  volume={1934},
+  number={1},
+  pages={2--12},
+  year={2005},
+  remark={The Napoli driving experiment},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @ARTICLE{Punzo-bench05,
   author = {Vincenzo Punzo and Fulvio Simonelli},
   title = {Analysis and comparision of microscopic flow models with real traffic
